--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
               >Certifications</a
             >
           </li>
+          <li class="nav-item">
+            <p class="nav-link">Views: <span id="views">0</span></p>
+          </li>
         </ul>
       </div>
     </nav>
@@ -432,5 +435,7 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
+
+    <script src="./index.js"></script>
   </body>
 </html>
