update cloud project

--- a/index.html
+++ b/index.html
@@ -381,12 +381,18 @@
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
           <p class="mb-5">
-            <strong>SunFi - Solar Energy FinTech:</strong> Collaborated with a
-            team of software engineers to develop a platform that provides
-            consumers access to solar energy through customizable payment plans
-            and also provide small and medium energy providers with tools and
-            resources needed to scale better energy access to consumers using
-            ReactJS, Python, AWS and postgresql.
+            <strong
+              >SunFi - Solar Energy FinTech (<a
+                href="https://www.sunfi.co/"
+                target="_blank"
+                >sunfi</a
+              >)</strong
+            >
+            Collaborated with a team of software engineers to develop a platform
+            that provides consumers access to solar energy through customizable
+            payment plans and also provide small and medium energy providers
+            with tools and resources needed to scale better energy access to
+            consumers using ReactJS, Python, AWS and postgresql.
           </p>
 
           <p class="mb-5">
@@ -398,14 +404,40 @@
             include React, Springboot Framework, Redux, Docker Container.
           </p>
 
-          <p>
-            <strong>My Cloud Resume</strong> Collaborated with a team of
-            software engineers to build an application that provides companies
-            and individuals an easy and efficient way to manage their savings,
-            loans and member contributions. Over 10,000 people have used it so
-            far and its also used by the Nigerian Police.Technologies used
-            include React, Springboot Framework, Redux, Docker Container.
-          </p>
+          <div>
+            <strong
+              >My Cloud Resume (<a
+                href="https://github.com/vikyij/victoria-cloud-resume"
+                target="_blank"
+                >github</a
+              >):</strong
+            >
+            Implemented a personal resume website leveraging AWS cloud services
+            to showcase cloud engineering skills.
+            <p>
+              Technologies used: AWS S3, DynamoDB, Lambda, CloudFront, Route 53,
+              CI/CD pipeline with GitHub Actions, Python, and Boto3.
+            </p>
+            <strong>KeyFeatures:</strong>
+            <ul>
+              <li>
+                Deployed the frontend using Amazon S3 and CloudFront for global
+                distribution and improved website performance
+              </li>
+              <li>
+                Integrated a visitor counter using Amazon DynamoDB and AWS
+                Lambda with Python to process backend logic.
+              </li>
+              <li>
+                Secured the website with HTTPS, leveraging Amazon Route 53 for
+                domain management and DNS configuration.
+              </li>
+              <li>
+                Implemented CI/CD pipelines with GitHub Actions to streamline
+                code deployment and updates.
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
